[gd_scene load_steps=18 format=2]

[ext_resource path="res://Entities/Player/Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Entities/Player/Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/Scripts/Health.gd" type="Script" id=3]
[ext_resource path="res://UI/HUD/HUD_UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Entities/Player/Assets/Damage_Particles.tres" type="Material" id=5]
[ext_resource path="res://Entities/Player/Sprites/targetting.png" type="Texture" id=6]
[ext_resource path="res://Entities/Player/Scripts/all_abilities.gd" type="Script" id=7]
[ext_resource path="res://Entities/Player/Scripts/player_weapons.gd" type="Script" id=8]
[ext_resource path="res://Entities/Weapons/Energy Rifle/Energy_Rifle.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/Player/Scripts/dash.gd" type="Script" id=10]

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 1.0
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel_random = 1.0
tangential_accel = 100.0
scale = 8.0
scale_curve = SubResource( 7 )
color = Color( 1, 1.4, 1, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 26.2078

[sub_resource type="GDScript" id=3]
script/source = "extends Camera2D


func _physics_process(delta):
	var mouse_offset = (get_viewport().get_mouse_position() - get_viewport().size / 2)
	position = lerp(Vector2(), mouse_offset.normalized() * 80, mouse_offset.length() / 1000)
"

[sub_resource type="CircleShape2D" id=4]
radius = 38.3045

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1.50196, 1, 1 ), Color( 1, 1.50196, 1, 0.313726 ), Color( 1, 1.50196, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
modulate = Color( 1, 1.4, 1, 1 )
z_index = 1
collision_mask = 115
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="abilities" type="Node" parent="."]
script = ExtResource( 7 )

[node name="weapons" type="Node2D" parent="."]
script = ExtResource( 8 )
primary_weapon = ExtResource( 9 )

[node name="dash" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="dash_particle" type="Particles2D" parent="dash"]
rotation = 3.14159
scale = Vector2( 1, 1.00783 )
emitting = false
lifetime = 0.4
one_shot = true
explosiveness = 1.0
randomness = 1.0
local_coords = false
process_material = SubResource( 1 )

[node name="dash_timer" type="Timer" parent="dash"]
one_shot = true

[node name="health" type="Node" parent="."]
script = ExtResource( 3 )
max_hp = 25
cur_hp = 25

[node name="invuln_timer" type="Timer" parent="health"]
one_shot = true

[node name="sprite" type="Sprite" parent="."]
modulate = Color( 1, 1.50196, 1, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.1, 1.1 )
smoothing_enabled = true
smoothing_speed = 10.0
script = SubResource( 3 )

[node name="Aim" type="Position2D" parent="."]
position = Vector2( 3.2765, 0 )

[node name="Sprite" type="Sprite" parent="Aim"]
modulate = Color( 1, 1, 1, 0.290196 )
position = Vector2( 42, 0 )
rotation = 1.5708
texture = ExtResource( 6 )

[node name="interact_zone" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact_zone"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/damage_flash = SubResource( 5 )

[node name="damage_particles" type="Particles2D" parent="."]
emitting = false
amount = 14
lifetime = 0.3
one_shot = true
explosiveness = 0.61
local_coords = false
process_material = ExtResource( 5 )
[connection signal="timeout" from="dash/dash_timer" to="dash" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="health/invuln_timer" to="health" method="_on_invuln_timer_timeout"]
[connection signal="area_entered" from="interact_zone" to="." method="_on_interact_zone_area_entered"]
[connection signal="area_exited" from="interact_zone" to="." method="_on_interact_zone_area_exited"]
